--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <ul>
                 <li>
-                    <a href="Home.html">Home</a>
+                    <a href="#">Home</a>
                 </li>
                 <li>
                     <a href="#aboutme">About</a>
@@ -39,7 +39,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="hero-content">
+        <div class="hero-content" id="home">
             <h1 id="title">
                 Melbourne Sound Recordist <br />Based in Melbourne Australia
             </h1>
