added metatags for seo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Hugh Palmer - Melbourne based Sound Recordist. Sound Engineer, Audio Recording and Mixing in Australia.  Specialising in sound for TVC, Doco, Corporate and Drama Film." />
+    <meta name="keywords" content="Sound Recordist, Melbourne, Australia, Audio Recording, Sound Recordist, Audio Restoration, TVC" />
+    <meta name="author" content="Hugh Palmer" />
     <title>Hugh Palmer Audio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
