--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <meta name="description" content="Hugh Palmer - Melbourne based Sound Recordist. Sound Engineer, Audio Recording and Mixing in Australia.  Specialising in sound for TVC, Doco, Corporate and Drama Film." />
     <meta name="keywords" content="Sound Recordist, Melbourne, Australia, Audio Recording, Sound Recordist, Audio Restoration, TVC" />
     <meta name="author" content="Hugh Palmer" />
-    <title>Hugh Palmer Audio</title>
+    <title>Melbourne Sound Recordist | Hugh Palmer Audio</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet" />
+    <link rel="icon" href="icons/mixer1.png" type="image/x-icon" />
 </head>
 
 <body>
