fixed some smaller screen responsiveness

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 </a>
             </div> -->
             <p>
-                This site was built with AWS.
+                This site was built by me and deployed to AWS.
             </p>
             <hr width="100%">
         </div>
