cleaned up structure

--- a/static/paths/recordist/index.html
+++ b/static/paths/recordist/index.html
@@ -10,55 +10,47 @@
     content="Sound Recordist, Melbourne, Australia, Audio Recording, Sound Recordist, Audio Restoration, TVC" />
   <meta name="author" content="Hugh Palmer" />
   <title>Melbourne Sound Recordist | Hugh Palmer Audio</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="../../styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=SUSE:wght@100..800&display=swap" rel="stylesheet" />
-  <link rel="icon" href="icons/mixer1.png" type="image/x-icon" />
+  <link rel="icon" href="../icons/mixer1.png" type="image/x-icon" />
 </head>
 
 <body>
-  <!-- Hero Section -->
-  <section class="hero">
-    <nav id="mainNavbar">
-      <div class="logo" id="logo">
-        <a href="Home.html">Hugh Palmer<span class="spin"> \ </span>Audio<span class="quote">"Sounds
-            Rolling"</span></a>
-      </div>
-      <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <ul>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#aboutme">About</a>
-        </li>
-        <li>
-          <a href="#gear-list">Gear list</a>
-        </li>
-        <li>
-          <a href="#contact-form">Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="hero-content" id="home">
-      <h1 id="title">
-        Melbourne Sound Recordist <br />Based in Melbourne Australia
-      </h1>
-      <a href="#contact-form" class="btn">Get in Touch</a>
+  <nav id="mainNavbar">
+    <div class="logo" id="logo">
+      <a href="Home.html">Hugh Palmer<span class="spin"> \ </span>Audio<span class="quote">"Sounds
+          Rolling"</span></a>
     </div>
-    <p class="subtext">Creative Solutions to Technical Problems</p>
-  </section>
-
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+    <ul>
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="/blog/">Blog</a>
+      </li>
+      <li>
+        <a href="#aboutme">About</a>
+      </li>
+      <li>
+        <a href="#gear-list">Gear list</a>
+      </li>
+      <li>
+        <a href="#contact-form">Contact</a>
+      </li>
+    </ul>
+  </nav>
   <!-- About Me Section -->
-  <section id="aboutme" class="aboutme">
+  <section style="margin: 100px;" id="aboutme" class="aboutme">
     <h2>About Me</h2>
     <div class="aboutme-content">
-      <img src="Images/REM_0394 BTS Chefchaouen 2.jpeg" alt="Hugh Palmer" id="Hugh-img" />
+      <img src="../Images/REM_0394 BTS Chefchaouen 2.jpeg" alt="Hugh Palmer" id="Hugh-img" />
       <p id="about-me-p">
         <strong>SOUND RECORDIST Based in Melbourne, Australia.</strong>
         I am a Melbourne Sound Recordist who is passionate about recording sound for any medium.
@@ -79,11 +71,11 @@
   </section>
   <!-- Gear list -->
   <section id="gear-list">
-    <h2>Gear List</h2>
+    <h2 style="padding-top: 50px;">Gear List</h2>
     <section class="gear-list">
       <section class="gear-row" id="gear-888">
         <div class="icon-box" id="icon-888">
-          <img src="icons/mixing-table.png" alt="" />
+          <img src="../icons/mixing-table.png" alt="" />
         </div>
         <div class="gear-content">
           <div>
@@ -94,12 +86,12 @@
           </div>
         </div>
         <div class="gear-image">
-          <img src="Images/888stack.png" alt="" />
+          <img src="../Images/888stack.png" alt="" />
         </div>
       </section>
       <section class="gear-row" id="gear-astral">
         <div class="icon-box" id="icon-nexus">
-          <img src="icons/wireless.png" alt="" />
+          <img src="../icons/wireless.png" alt="" />
         </div>
         <div class="gear-content">
           <div>
@@ -113,12 +105,12 @@
           </div>
         </div>
         <div class="gear-image">
-          <img src="Images/A20Nexus-front.png" alt="" />
+          <img src="../Images/A20Nexus-front.png" alt="" />
         </div>
       </section>
       <section class="gear-row" id="gear-microphones">
         <div class="icon-box" id="icon-mics">
-          <img src="icons/mic.png" alt="" />
+          <img src="../icons/mic.png" alt="" />
         </div>
         <div class="gear-content">
           <div>
@@ -132,12 +124,12 @@
           </div>
         </div>
         <div class="gear-image">
-          <img src="Images/2017-shotgun-microphone-1170x660-Photoroom.png" alt="" />
+          <img src="../Images/2017-shotgun-microphone-1170x660-Photoroom.png" alt="" />
         </div>
       </section>
       <section class="gear-row" id="gear-iems">
         <div class="icon-box" id="icon-iem">
-          <img src="icons/wireless-headphones.png" alt="" />
+          <img src="../icons/wireless-headphones.png" alt="" />
         </div>
         <div class="gear-content">
           <div>
@@ -151,12 +143,11 @@
           </div>
         </div>
         <div class="gear-image">
-          <img src="Images/sennheiser-iem.png" alt="" />
+          <img src="../Images/sennheiser-iem.png" alt="" />
         </div>
       </section>
     </section>
   </section>
-  <!-- About  -->
   <section>
     <div id="external-links">
       <h2>Stuff I Make</h2>
@@ -170,13 +161,13 @@
         <div class="proj">
           <div>
             <a class="ext-links" href="http://www.metasoundtools.com" target="_blank" rel="noopener noreferrer">
-              <img width="150" height="150" class="link-img" src="./Images/mst-icon.png" alt="Meta Sound Tools">
+              <img width="150" height="150" class="link-img" src="./../Images/mst-icon.png" alt="Meta Sound Tools">
             </a>
           </div>
         </div>
         <div class="proj">
           <a class="ext-links" href="https://www.dhundesigns.com" target="_blank" rel="noopener noreferrer">
-            <img width="150" height="150" class="link-img" src="./Images/Black on White.png" alt="Dhun Designs">
+            <img width="150" height="150" class="link-img" src="./../Images/Black on White.png" alt="Dhun Designs">
           </a>
         </div>
       </div>
@@ -213,13 +204,13 @@
   <footer>
     <div class="socials">
       <a href="https://www.linkedin.com/in/hugh-palmer-0a8139a5/" target="_blank" rel="noopener noreferrer">
-        <img src="Images/LinkedIN_white.png" alt="LinkedIn" width="30" height="30">
+        <img src="../Images/LinkedIN_white.png" alt="LinkedIn" width="30" height="30">
       </a>
       <a href="https://www.instagram.com/hughpalmerproduction/" target="_blank" rel="noopener noreferrer">
-        <img src="Images/Instagram_white.png" alt="Instagram" width="30" height="30">
+        <img src="../Images/Instagram_white.png" alt="Instagram" width="30" height="30">
       </a>
       <a href="https://github.com/2bitburrito" target="_blank" rel="noopener noreferrer">
-        <img src="Images/Github_white.png" alt="Github" width="30" height="30">
+        <img src="../Images/Github_white.png" alt="Github" width="30" height="30">
       </a>
     </div>
     <p>
@@ -227,7 +218,7 @@
       reserved.
     </p>
   </footer>
-  <script src="index.js"></script>
+  <script src="../../index.js"></script>
 </body>
 
 </html>
