chore: cleaned up some stuff - happy with basic layout for now

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
       <h1 id="title">
         Melbourne Sound Recordist <br />Based in Melbourne Australia
       </h1>
-      <a href="/recordist/#contact-form" class="btn">Get in Touch</a>
+      <a href="/recordist/" class="btn">Enter Now & Get In Touch</a>
     </div>
     <p class="subtext">Creative Solutions to Technical Problems</p>
   </section>
