--- a/static/paths/recordist/index.html
+++ b/static/paths/recordist/index.html
@@ -52,7 +52,7 @@
     <div class="aboutme-content">
       <img src="../Images/REM_0394 BTS Chefchaouen 2.jpeg" alt="Hugh Palmer" id="Hugh-img" />
       <p id="about-me-p">
-        <strong>SOUND RECORDIST Based in Melbourne, Australia.</strong>
+        <strong>SOUND RECORDIST AND DEVELOPER Based in Melbourne, Australia.</strong>
         I am a Melbourne Sound Recordist who is passionate about recording sound for any medium.
         I have a tireless work ethic and strive to ensure that every project
         sounds the very best that it can while also bringing a friendly and
