--- a/static/index.html
+++ b/static/index.html
@@ -4,10 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description"
-    content="Hugh Palmer - Melbourne based Sound Recordist. Sound Engineer, Audio Recording and Mixing in Australia.  Specialising in sound for TVC, Doco, Corporate and Drama Film." />
+  <meta name="description" content="Hugh Palmer - Developer based in Melbourne Austraila" />
   <meta name="keywords"
-    content="Sound Recordist, Melbourne, Australia, Audio Recording, Sound Recordist, Audio Restoration, TVC" />
+    content="Developer, Melbourne, Australia, Audio Recording, Sound Recordist, Audio Restoration, Saas, Software" />
   <meta name="author" content="Hugh Palmer" />
   <title>Melbourne Sound Recordist | Hugh Palmer Audio</title>
   <link rel="stylesheet" href="styles.css" />
@@ -22,9 +21,9 @@
   <section class="hero">
     <div class="hero-content" id="home">
       <h1 id="title">
-        Melbourne Sound Recordist <br />Based in Melbourne Australia
+        Hugh Palmer == Developer <br />Based in Melbourne Australia
       </h1>
-      <a href="/recordist/" class="btn">Enter Now & Get In Touch</a>
+      <a href="./main/" class="btn">Get In Touch</a>
     </div>
     <p class="subtext">Creative Solutions to Technical Problems</p>
   </section>
