--- a/static/main/index.html
+++ b/static/main/index.html
@@ -78,6 +78,7 @@
         <div class="blog-list-title">My Blog Tech Stack</div>
         <div class="blog-list-description">How I arrived at the stack for this blog</div>
       </a>
+      <div class="blog-list-views">{{.Views}}</div>
     </li>
     
     <li class="blog-list-entry">
@@ -85,6 +86,7 @@
         <div class="blog-list-title">The Wav File Format</div>
         <div class="blog-list-description">A deep dive into wav files used in Broadcast applications</div>
       </a>
+      <div class="blog-list-views">{{.Views}}</div>
     </li>
     
   </ol>
